# opencv-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  map.hpp
test/: CMakeLists.txt
